tests/errors/typecheck/test_tc_04_deref_nonptr.pc
#import std.console;
int main() {
    int x = 5;
    *x = 10;
}
